# runedoc-tauri

./: angular.json  package-lock.json  package.json  tailwind.config.js  todo  tsconfig.json
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: accordion.component.ts  alert.component.ts  app.component.html  app.component.ts  app.config.ts  app.routes.ts  statemanager.ts
src/app/header/: header.component.html  header.component.spec.ts  header.component.ts
src/app/icp-events/: events.ts
src/app/icp-events/packethandlers/: metrics.ts  rsn.ts
src/app/models/: account.ts  metricsnapshot.ts  sceneobject.ts  vecs.ts
src/app/routes/: index.ts
src/app/routes/afkwarden/: afkwarden.component.css  afkwarden.component.html  afkwarden.component.spec.ts  afkwarden.component.ts
src/app/routes/client/: client.component.html  client.component.spec.ts  client.component.ts
src/app/routes/home/: home.component.html  home.component.spec.ts  home.component.ts
src/app/routes/settings/: settings.component.ts
src/app/routes/tracker/: skilldata.ts  tracker.component.html  tracker.component.spec.ts  tracker.component.ts
src/app/services/: skills.service.ts
src/app/shared/services/: afkwarden.service.spec.ts  afkwarden.service.ts  example.service.ts  global.service.ts  highlight.service.ts  sceneobjects.service.spec.ts  sceneobjects.service.ts  skills.service.ts
src/app/sidenav/: sidenav.component.html  sidenav.component.spec.ts  sidenav.component.ts
(+23 files in other folders)
